--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
+<script src="js/drop.js"></script>
+<script src="js/bucket.js"></script>
 <script src="js/script.js"></script>
 <style type="text/css">
 	.raindrop { width:50px; height:50px;
